# fqutils

./: .gitignore  00_DEVELOPERS  AUTHORS  ChangeLog  ChangeLog.md  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  index.html  mkdist.sh  params.json
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: ax_path_lib_pcre.m4
share/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in
src/fqu_are_paired/: Makefile.am  Makefile.in  fqu_are_paired.man  main.c  main.h  mkdata  options.c
src/fqu_cat/: Makefile  Makefile.am  Makefile.in  fqu_cat.man  main.c  main.h  mkdata  options.c  options.h
src/fqu_cull/: Makefile.am  Makefile.in  fqu_cull.man  main.c  main.h  options.c  options.h
src/fqu_degen/: Makefile.am  Makefile.in  fqu_degen.man  main.c  main.h  mkdata  options.c  options.h
src/fqu_is_paired/: Makefile.am  main.h  options.c
src/fqu_rselect/: Makefile.am  Makefile.in  fqu_rselect.man  main.c  main.h  options.c  options.h
src/fqu_splitq/: Makefile.am  Makefile.in  fqu_splitq.man  main.c  main.h  mkdata  options.c  options.h
src/fqu_summary/: Makefile  Makefile.am  Makefile.in  fqu_summary.man  main.c  main.h  mkdata  options.c  options.h
src/fqu_tab2q/: Makefile  Makefile.am  Makefile.in  main.c  main.h  options.c  options.h
src/fqu_tidy/: Makefile  Makefile.am  Makefile.in  fqu_tidy.man  main.c  main.h  options.c  options.h
src/fqu_wc/: Makefile.am  Makefile.in  fqu_wc.man  main.c  main.h  mkdata  options.c  options.h
src/goodbye/: Makefile  Makefile.am  Makefile.in  main.c  options.c
src/hello/: Makefile  Makefile.am  Makefile.in  main.c  main.h  options.c  options.h
src/share/: Makefile  Makefile.am  Makefile.in  fgetopt.c  fgetopt.h  fqreader.c  fqreader.h  kmer.c  kmer.h  linereader.c  linereader.h  mkdirp.c  mkdirp.h  strutils.c  strutils.h  tdfreader.c  tdfreader.h  tokenset.c  tokenset.h  uthash.h  utils.c  utils.h  varstr.c  varstr.h
tests/: Makefile  Makefile.am  Makefile.in  expected-fqu_cat-02  expected-fqu_tidy-01  in00.fq  test-fqu_cat-01.bash  test-fqu_cat-02.bash  test-fqu_tidy-01.bash
