#NOTE NEXT IS ONLY FOR INSTALLED LIBRARIES
#lib_LIBRARIES = libshare.a

noinst_LIBRARIES = libshare.a
libshare_a_SOURCES = \
  fqreader.c fqreader.h \
  linereader.c linereader.h \
  strutils.c strutils.h \
  tokenset.c tokenset.h \
  uthash.h \
  varstr.c varstr.h

clean-generic:
	rm -f core core.* a.out *.BAK *.bak *~

